# wiga-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
src/hooks/: pre-commit.sh  setup-git-hooks.sh
tests/: test_udp.py
wiga/: __init__.py  message.py
wiga/clients/: base.py  udp.py
wiga/codecs/: base.py  json.py
wiga/core/: __init__.py  background.py  udp.py
wiga/server/: __init__.py  app.py
wiga/server/connections/: __init__.py  base.py  udp.py
wiga/server/listeners/: base.py  udp.py
