[metadata]
name = wiga
version = 0.1.0
description = Wire-level game server (and may be client) library
long_description = file: README.md
long_description_content_type = text/markdown
author = el71Gato
license = BSD-3-Clause
url = https://github.com/eIGato/wiga-python
keywords =
    framework
    game
    library
    room
    server
    socket
    udp
    wiga
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: AsyncIO
    Topic :: Games/Entertainment
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
setup_requires =

[options.packages.find]
include = wiga

[options.extras_require]
testing =
    pytest
    pytest-asyncio
dev =
    autoflake
    black
    coverage
    flake8
    flake8-black
    flake8-isort
    isort
    mypy
    pytest
    pytest-asyncio
    pytest-cov

[flake8]
max_line_length = 79
max_doc_length = 79
count = True
statistics = True
doctests = True
ignore =
    # PEP-8 codes:
    # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
    E126,E133,E226,E241,E242,E309,E704,W503,W505,
    # Black breaks this rule, when it formats slices.
    E203,
    # Docstyle codes: http://www.pydocstyle.org/en/latest/error_codes.html
    D105,D106,D203,D211,D213,D302,D406,D407,D413,
    # Pyflakes codes: https://flake8.pycqa.org/en/latest/user/error-codes.html
    # It is normal to redefine `_`.
    F811,
extend_select =
    # PEP-8 codes:
    # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
    E123,W504,
    # Docstyle codes: http://www.pydocstyle.org/en/latest/error_codes.html
    D212,D214,D404,D405,D410,D411,D415,D416,
extend_exclude =
    .venv
    src/
max_complexity = 10
per_file_ignores =
    __init__.py: F401,F403,F405

[isort]
combine_as_imports = True
force_grid_wrap = 2
include_trailing_comma = True
known_first_party = wiga
line_length = 79
multi_line_output = 3
sections =
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    LOCALFOLDER
use_parentheses = True

[mypy]
cache_dir = /dev/null
check_untyped_defs = True
files = .
ignore_missing_imports = True
namespace_packages = True
python_version = 3.10
warn_redundant_casts = True
warn_unused_ignores = True

[tool:pytest]
testpaths = tests
addopts =
    --cov-report=term-missing
    --no-cov-on-fail
    --strict-markers
    --tb=native
    -r aP
filterwarnings =
    error
asyncio_mode = auto

[coverage:run]
branch = True
source =
    ./
omit =
    tests/*

[coverage:report]
skip_covered = True
